--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
         <p class="subtitle">Complete end-to-end automation workflow</p>
       </div>
       <div class="glass-card glow-blue reveal" style="padding: 1rem; margin-top: 1rem;">
-        <img class="arch-img" src="photos/architecture-diagram.png"
+        <img class="arch-img" src="photos/arc-1.png"
           alt="CI/CD Architecture Diagram"
           onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
         <div class="img-placeholder" style="display:none">
@@ -826,7 +826,7 @@
         <p class="subtitle">Grafana visualization with Prometheus data source</p>
       </div>
       <div class="glass-card glow-green reveal" style="padding:1rem; margin-top: 1rem;">
-        <img class="dashboard-img"  src="photos/grafana-dashboard.png"
+        <img class="dashboard-img"  src="photos/arc-2.png"
           alt="Grafana Dashboard"
           onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
         <div class="img-placeholder" style="display:none">
